--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
       /></a>
     </div> 
     <div class="right">
-       <h3>手機</h3>
-       <p>CPU:i3-1300</p>
-       <p>RAM:16GB</p>
+       <h3>手機優缺點</h3>
+       <p>iPhone 14 :1、動態島無感 平時不太用
+        2、螢幕刷新率確實感到絲滑很多
+        3、拍照畫質明顯好很多</p>
+       <p>Galaxy Z Fold5:散熱面積增加、內頁螢幕耐久度提升</p>
+       <p>iPhone 11:無法戴口罩臉部辨識</p>
     </div>
    </div>
 
@@ -44,7 +47,7 @@
     <p>iOS 16 作業系統</p>
     <p>1,200 萬畫素鏡頭F1.9 光圈</p>
     <p>6.1 OLED超 Retina XDR 螢幕2,532 x 1,170pixels</p>
-    <p>Apple A15 仿生晶片 5 核心 GPU</p>
+    <p>Apple A15 </p>
     <p>128GB、256GB、512GB</p>
     <p>最低27000元</p>
 </div>
@@ -53,10 +56,17 @@
    <p>Android13作業系統</p>
    <p>1000萬畫素、前置相機光圈F2.2</p>
    <p>封面螢幕  6.2 吋 Dynamic AMOLED 2X120Hz </p>
+   <p>Qualcomm</p> 
+   <p>256GB、512GB</p>
+   <p>最低56888</p>
  </div>
  <div  class="right">
-  <h2>London</h2>
-  <p>London is the capital city of England.</p>
-  <p>London has over 13 million inhabitants.</p>
+  <h2>iPhone 11</h2>
+  <p>iOS 13</p>
+  <p>1200萬 像素</p>
+  <P>6.1 吋 全螢幕 1792 x 828 像素 326 ppi 解析度</P>
+  <p> Apple A13</p>
+<p>64GB、128GB、256GB</p>
+<p>最低26900</p>
  </div>
 </div>
