--- a/index.html
+++ b/index.html
@@ -4,69 +4,70 @@
   <!--ˋ這是頭-->
   <head>
     <title>手機介紹</title>
-    <link rel="stylesheet" href="css\style.css">
-    <link rel="icon" type="image/x-icon" href="img/圖片1.png">
+    <link rel="stylesheet" href="css\style.css" />
+    <link rel="icon" type="image/x-icon" href="img/圖片1.png" />
   </head>
 
   <!--這是身體-->
   <body>
-    <a href="https://www.asus.com/tw/store/laptops/"><h1>手機<h1></h1></a>
-    <ul style="margin: 0;">
+    <a href=" https://www.sogi.com.tw/"><h1>手機</h1></a>
+    <ul style="margin: 0">
       <li><a href="#">型號</a></li>
       <li><a href="#">系統</a></li>
       <li><a href="#">尺寸</a></li>
-     <li><a href="#">重量</a></li>
+      <li><a href="#">重量</a></li>
       <li><a href="#">螢幕</a></li>
       <li><a href="#">處理器</a></li>
       <li><a href="#">儲存空間</a></li>
-     <li><a href="#">前鏡頭</a></li>
+      <li><a href="#">前鏡頭</a></li>
       <li><a href="#">後鏡頭</a></li>
       <li><a href="#">評價</a></li>
       <li><a href="#">價格</a></li>
-   </ul>
-   <!--<p style="margin: 0;">手機簡介</p> -->
-   <div class="motherContainer">
-    <div class="left">
-      <a href="https://www.sogi.com.tw/brands"
-      ><img src="img/圖片1.png"
-      /></a>
-    </div> 
-    <div class="right">
-       <h3>手機優缺點</h3>
-       <p>iPhone 14 :1、動態島無感 平時不太用
-        2、螢幕刷新率確實感到絲滑很多
-        3、拍照畫質明顯好很多</p>
-       <p>Galaxy Z Fold5:散熱面積增加、內頁螢幕耐久度提升</p>
-       <p>iPhone 11:無法戴口罩臉部辨識</p>
+    </ul>
+    <!--<p style="margin: 0;">手機簡介</p> -->
+    <div class="motherContainer">
+      <div class="left">
+        <a href="https://www.sogi.com.tw/brands"><img src="img/圖片1.png" /></a>
+      </div>
+      <div class="right">
+        <h3>手機優缺點</h3>
+        <p>
+          iPhone 14 :1、動態島無感 平時不太用 2、螢幕刷新率確實感到絲滑很多
+          3、拍照畫質明顯好很多
+        </p>
+        <p>Galaxy Z Fold5:散熱面積增加、內頁螢幕耐久度提升</p>
+        <p>iPhone 11:無法戴口罩臉部辨識</p>
+      </div>
     </div>
-   </div>
 
-<div class="grid-container">
-  <div class="left">
-    <h2>iphone14</h2>
-    <p>iOS 16 作業系統</p>
-    <p>1,200 萬畫素鏡頭F1.9 光圈</p>
-    <p>6.1 OLED超 Retina XDR 螢幕2,532 x 1,170pixels</p>
-    <p>Apple A15 </p>
-    <p>128GB、256GB、512GB</p>
-    <p>最低27000元</p>
-</div>
- <div class="center">
-   <h2>Galaxy Z Fold5</h2>
-   <p>Android13作業系統</p>
-   <p>1000萬畫素、前置相機光圈F2.2</p>
-   <p>封面螢幕  6.2 吋 Dynamic AMOLED 2X120Hz </p>
-   <p>Qualcomm</p> 
-   <p>256GB、512GB</p>
-   <p>最低56888</p>
- </div>
- <div  class="right">
-  <h2>iPhone 11</h2>
-  <p>iOS 13</p>
-  <p>1200萬 像素</p>
-  <P>6.1 吋 全螢幕 1792 x 828 像素 326 ppi 解析度</P>
-  <p> Apple A13</p>
-<p>64GB、128GB、256GB</p>
-<p>最低26900</p>
- </div>
-</div>
+    <div class="grid-container">
+      <div class="left">
+        <h2>iphone14</h2>
+        <p>iOS 16 作業系統</p>
+        <p>1,200 萬畫素鏡頭F1.9 光圈</p>
+        <p>6.1 OLED超 Retina XDR 螢幕2,532 x 1,170pixels</p>
+        <p>Apple A15</p>
+        <p>128GB、256GB、512GB</p>
+        <p>最低27000元</p>
+      </div>
+      <div class="center">
+        <h2>Galaxy Z Fold5</h2>
+        <p>Android13作業系統</p>
+        <p>1000萬畫素、前置相機光圈F2.2</p>
+        <p>封面螢幕 6.2 吋 Dynamic AMOLED 2X120Hz</p>
+        <p>Qualcomm</p>
+        <p>256GB、512GB</p>
+        <p>最低56888</p>
+      </div>
+      <div class="right">
+        <h2>iPhone 11</h2>
+        <p>iOS 13</p>
+        <p>1200萬 像素</p>
+        <p>6.1 吋 全螢幕 1792 x 828 像素 326 ppi 解析度</p>
+        <p>Apple A13</p>
+        <p>64GB、128GB、256GB</p>
+        <p>最低26900</p>
+      </div>
+    </div>
+  </body>
+</html>
